<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="AboutUS">درباره ما</string>
    <string name="AlgorithmVersion">تولید کد دستگاه های ورژن 20.5 و بعد از آن.</string>
    <string name="CalculateButtonText">محاسبه</string>
    <string name="CancelCode">کد کنـسـل :</string>
    <string name="EighthRegister">رجیستر 08 :</string>
    <string name="FifthRegister">رجیستر 05 :</string>
    <string name="FirstRegister">رجیستر 01 :</string>
    <string name="FourthRegister">رجیستر 04 :</string>
    <string name="InputHit">شماره سریال</string>
    <string name="Mobile">شماره تماس:09134084027</string>
    <string name="NinthRegister">رجیستر 09 :</string>
    <string name="OneYearCode">کد یکسـاله :</string>
    <string name="Producer">تولید کنندگان: مسعود رحمانی ، جواد اعتباریان</string>
    <string name="R10L">970 / 097</string>
    <string name="R11L">xxx / xxx</string>
    <string name="R12L">720 / 110</string>
    <string name="R1Label">720 / 720</string>
    <string name="R2L">720 / 360</string>
    <string name="R3L">720 / 240</string>
    <string name="R4L">720 / 180</string>
    <string name="R5L">720 / 144</string>
    <string name="R6L">720 / 120</string>
    <string name="R7L">861 / 123</string>
    <string name="R8L">992 / 124</string>
    <string name="R9L">108 / 012</string>
    <string name="SecondRegister">رجیستر 02 :</string>
    <string name="SerialNumber">سریال دستگاه را وارد کنید</string>
    <string name="SeventhRegister">رجیستر 07 :</string>
    <string name="SixthRegister">رجیستر 06 :</string>
    <string name="TenthRegister">رجیستر 10 :</string>
    <string name="ThirdRegister">رجیستر 03 :</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">پیروز پایور سپاهان</string>
    <string name="Hagh">به نام حق</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>

    <string name="action_settings">درباره ماه</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome">خوش آمدید</string>
    <string name="login">ورود</string>
    <string name="credlogin">ورود با رمز</string>
    <string name="def_error">خطای پیش فرض</string>
</resources>