<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:verticalScrollbarPosition="right">

    <TextView
        android:id="@+id/TitleLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/bnazanin"
        android:text="@string/SerialNumber"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimaryDark"
        android:textColorLink="?attr/colorPrimaryDark"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/SnTxtInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/bnazanin"
        android:hint="@string/InputHit"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="8" />

    <Button
        android:id="@+id/CalculateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bnazanin"
        android:text="@string/CalculateButtonText"
        android:textSize="20sp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:isScrollContainer="true"
            android:layoutDirection="rtl"
            android:paddingStart="15dp"
            android:paddingEnd="7dp"
            android:paddingBottom="25dp"
            android:textAlignment="center"
            android:textDirection="rtl">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/R1Label"
                    android:textDirection="ltr"
                    android:textSize="19sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bnazanin"
                    android:paddingStart="10sp"
                    android:paddingEnd="15sp"
                    android:text="@string/FirstRegister"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/firstRegister"
                    android:textAlignment="center"
                    android:textDirection="ltr"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/R2L"
                    android:textDirection="ltr"
                    android:textSize="19sp" />

                <TextView
                    android:fontFamily="@font/bnazanin"
                    android:paddingStart="10sp"
                    android:paddingEnd="15sp"
                    android:text="@string/SecondRegister"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/scndRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/R3L"
                    android:textDirection="ltr"
                    android:textSize="19sp" />

                <TextView
                    android:fontFamily="@font/bnazanin"
                    android:paddingStart="10sp"
                    android:paddingEnd="15sp"
                    android:text="@string/ThirdRegister"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/thrdRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/R4L"
                    android:textDirection="ltr"
                    android:textSize="19sp" />

                <TextView
                    android:fontFamily="@font/bnazanin"
                    android:paddingStart="10sp"
                    android:paddingEnd="15sp"
                    android:text="@string/FourthRegister"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fourthRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/R5L"
                    android:textDirection="ltr"
                    android:textSize="19sp" />

                <TextView
                    android:fontFamily="@font/bnazanin"
                    android:paddingStart="10sp"
                    android:paddingEnd="15sp"
                    android:text="@string/FifthRegister"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fifthRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/R6L"
                    android:textDirection="ltr"
                    android:textSize="19sp" />

                <TextView
                    android:fontFamily="@font/bnazanin"
                    android:paddingStart="10sp"
                    android:paddingEnd="15sp"
                    android:text="@string/SixthRegister"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sixthRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/R7L"
                    android:textDirection="ltr"
                    android:textSize="19sp" />

                <TextView
                    android:fontFamily="@font/bnazanin"
                    android:paddingStart="10sp"
                    android:paddingEnd="15sp"
                    android:text="@string/SeventhRegister"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/seventhRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/R8L"
                    android:textDirection="ltr"
                    android:textSize="19sp" />

                <TextView
                    android:fontFamily="@font/bnazanin"
                    android:paddingStart="10sp"
                    android:paddingEnd="15sp"
                    android:text="@string/EighthRegister"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/eightRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/R9L"
                    android:textDirection="ltr"
                    android:textSize="19sp" />

                <TextView
                    android:fontFamily="@font/bnazanin"
                    android:paddingStart="10sp"
                    android:paddingEnd="15sp"
                    android:text="@string/NinthRegister"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ninthRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/R10L"
                    android:textDirection="ltr"
                    android:textSize="19sp" />

                <TextView
                    android:fontFamily="@font/bnazanin"
                    android:paddingStart="10sp"
                    android:paddingEnd="15sp"
                    android:text="@string/TenthRegister"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TenthRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/R11L"
                    android:textDirection="ltr"
                    android:textSize="19sp" />

                <TextView
                    android:fontFamily="@font/bnazanin"
                    android:paddingStart="10sp"
                    android:paddingEnd="15sp"
                    android:text="@string/CancelCode"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/CancelCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/R12L"
                    android:textDirection="ltr"
                    android:textSize="19sp" />

                <TextView
                    android:paddingStart="10sp"
                    android:paddingEnd="15sp"
                    android:text="@string/OneYearCode"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/bnazanin" />

                <TextView
                    android:id="@+id/OneYearCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>
        </TableLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
