<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BioLogin">

    <ImageView
        android:id="@+id/LoginLogo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:clickable="false"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/piroz" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="140dp"
        android:isScrollContainer="true"
        android:layoutDirection="rtl"
        android:gravity="center_vertical|center_horizontal"
        android:paddingBottom="25dp"
        android:textAlignment="center"
        android:textDirection="rtl"
        >

        <TableRow android:gravity="center_horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:fontFamily="@font/nasaliq"
                android:layoutDirection="rtl"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="@color/teal_700"
                android:textSize="38pt" />
        </TableRow>

        <TableRow android:gravity="center_horizontal">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bnazanin"
                android:text="@string/login"
                android:textSize="27sp" />
        </TableRow>
        <TableRow android:gravity="center_horizontal">

            <Button
                android:id="@+id/loginCredButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:textColor="@color/design_default_color_secondary"
                style="@style/Widget.Material3.FloatingActionButton.Surface"
                android:text="@string/credlogin"
                android:visibility="gone"
                />
        </TableRow>
        <TableRow android:layout_marginTop="10dp" android:gravity="center_horizontal">

            <TextView
                android:id="@+id/errorText"
                android:fontFamily="@font/bnazanin"
                android:text="@string/def_error"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_error"
                android:textSize="20sp"
                android:visibility="gone" />
        </TableRow>


    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>