<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/god"
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:fontFamily="@font/nasaliq"
        android:text="@string/Hagh"
        android:textAlignment="center"
        android:textColor="#070404"
        android:textDirection="rtl"
        android:textSize="60dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="250sp"
                android:scaleType="fitCenter"
                android:src="@drawable/piroz"
                />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layoutDirection="rtl"
                    android:textDirection="rtl">

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layoutDirection="rtl"
                    android:textDirection="rtl">

                    <TextView
                        android:id="@+id/aucontent"
                        android:layout_width="wrap_content"
                        android:fontFamily="@font/bnazanin"
                        android:text="@string/AlgorithVersion"
                        android:textAlignment="center"
                        android:textColor="@color/teal_700"
                        android:textDirection="rtl"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layoutDirection="rtl"
                    android:textDirection="rtl">

                    <TextView
                        android:id="@+id/producer"
                        android:layout_width="wrap_content"
                        android:fontFamily="@font/bnazanin"
                        android:text="@string/Producer"
                        android:textAlignment="center"
                        android:textColor="@color/teal_700"
                        android:textDirection="rtl"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layoutDirection="rtl"
                    android:textDirection="rtl">

                    <TextView
                        android:id="@+id/mobile"
                        android:layout_width="wrap_content"
                        android:fontFamily="@font/bnazanin"
                        android:text="@string/Mobile"
                        android:textAlignment="center"
                        android:textColor="@color/teal_700"
                        android:textDirection="rtl"
                        android:textSize="20sp" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--    xmlns:tools="http://schemas.android.com/tools"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent"-->
    <!--    tools:context=".AbouUsActivity">-->

    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->